--- a/src/component/css/typography/typefaces.css
+++ b/src/component/css/typography/typefaces.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: MorrisonsAgenda;
-  src: url('./fonts/MorrisonsAgenda-Light.woff') format('woff');
+  src: url("./fonts/MorrisonsAgenda-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: MorrisonsAgenda;
-  src: url('./fonts/MorrisonsAgenda-Medium.woff') format('woff');
+  src: url("./fonts/MorrisonsAgenda-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -16,24 +16,28 @@
 
 @font-face {
   font-family: MorrisonsAgenda;
-  src: url('./fonts/MorrisonsAgenda-Semibold.woff') format('woff');
+  src: url("./fonts/MorrisonsAgenda-Semibold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
 }
 
 @font-face {
-  font-family: 'Oxygen Mono';
+  font-family: "Oxygen Mono";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/oxygenmono/v7/h0GsssGg9FxgDgCjLeAd7hjWx-6tPUUvkdU.woff2) format('woff2');
+  src: url(https://fonts.gstatic.com/s/oxygenmono/v7/h0GsssGg9FxgDgCjLeAd7hjWx-6tPUUvkdU.woff2)
+    format("woff2");
 }
 
 @font-face {
-  font-family: 'Oxygen Mono';
+  font-family: "Oxygen Mono";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/oxygenmono/v7/h0GsssGg9FxgDgCjLeAd7hjYx-6tPUUv.woff2) format('woff2');
+  src: url(https://fonts.gstatic.com/s/oxygenmono/v7/h0GsssGg9FxgDgCjLeAd7hjYx-6tPUUv.woff2)
+    format("woff2");
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
